# chifoumi

./: CMakeLists.txt  README.md  README1.txt
doc_sphinx/source/: conf.py  index.rst
src/: Partie.cpp  Partie.cpp~  Partie.hpp  Partie.hpp~  Partie_test.cpp  Partie_test.cpp~  Random.hpp  main.cpp
